Fix JSX syntax error in Legend formatter and cleanup renderStep3

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-VITE_GOOGLE_MAPS_API_KEY=AIzaSyAjiY_c0p6pU8cbR9chx0-BXxw3oZNZeZY
-VITE_GOOGLE_MAPS_MAP_ID=73e17ef14a0c591624c0f6b0
-VITE_YOUTUBE_API_KEY=AIzaSyCSfzGZG3iVRHulMlZQ_-ShT33SelaMuxc
-VITE_GEMINI_API_KEY=AIzaSyAXLhGZ0h4IW72LM8iA4MFTkkSBGaaK4xg
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyBbnohZbfMRvjXGfg2Ru6a5E6W71jPGIxI
+VITE_GOOGLE_MAPS_MAP_ID=73e17ef14a0c591663fe3f5e
+VITE_YOUTUBE_API_KEY=AIzaSyBsM2q_81kpwxFIgodvsj4fiDpl0ZGE_xE
+VITE_GEMINI_API_KEY=AIzaSyAA_H9xP45nEs3-uJuhMC66qHf1cXYUss4
+GOOGLE_CLOUD_PROJECT=bgmi-poc-new
+GOOGLE_API_KEY=AQ.Ab8RN6KQ0lGfitMLL2Bxg5P-YqutcuJCxPaSABCMlqkYEL3ZVg
